# llama-cpp-runner

./: .drone.yml  .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs
.claude/: settings.local.json
.gitea/workflows/: main-merge.yml  pull-request.yml
.github/workflows/: main-merge.yml  pull-request.yml
embedding-llm/: Cargo.toml  README.md  USER_GUIDE.md  build.rs
embedding-llm/protobuf/: embedding_args.proto  llm_result.proto  llm_runner_settings.proto
embedding-llm/src/: chunking_adapter.rs  embedding.rs  error.rs  lib.rs  llamacpp_bridge.rs  sliding_window.rs  text_processing.rs  token_position.rs  tokenization.rs
embedding-llm/tests/: integration_tests.rs  plugin_integration_tests.rs
gguf-reranker-validation/: Cargo.toml
gguf-reranker-validation/src/: main.rs
hf-hub-utils/: Cargo.toml
hf-hub-utils/src/: lib.rs
llama-cpp-plugin/: Cargo.toml  README.ja.md  README.md  rust-toolchain.toml
llama-cpp-plugin/docs/: client-tool-calling.ja.md
llama-cpp-plugin/src/: lib.rs  model.rs  oai_chat.rs  reasoning_splitter.rs
llama-cpp-plugin/src/model/: config.rs  decode.rs  helpers.rs  test_support.rs  wrapper.rs
llama-cpp-plugin/src/oai_chat/: common.rs  gemma4.rs  qwen.rs
llama-cpp-plugin/tests/fixtures/tool_calling_golden/: gemma4_e4b_auto_tool_call.json  qwen35_4b_auto_tool_call.json  qwen3_0_6b_auto_tool_call.json  schema_smoke.json
llama-protobuf/: Cargo.toml  build.rs
llama-protobuf/protobuf/jobworkerp/runner/llm/: chat_args.proto  chat_result.proto  completion_args.proto  completion_result.proto
llama-protobuf/protobuf/llama_cpp/: llama_cpp_arg.proto  llama_cpp_operation.proto  llama_cpp_runner.proto  media_input.proto
llama-protobuf/protobuf/ollama/: ollama_arg.proto  ollama_args.proto  ollama_operation.proto  ollama_runner.proto
llama-protobuf/src/: lib.rs  proto_resolve.rs
mtmd-support/: Cargo.toml
mtmd-support/src/: error.rs  lib.rs  limits.rs  marker.rs  runtime.rs
ollama-plugin/: Cargo.toml  workflow.yml
ollama-plugin/src/: lib.rs
protobuf/: llama_cpp_operation.proto
reranker-runner/: Cargo.toml  build.rs
reranker-runner/protobuf/: reranker_args.proto  reranker_result.proto  reranker_settings.proto
reranker-runner/src/: cache.rs  config.rs  error.rs  lib.rs  model.rs  reranker.rs  traits.rs  utils.rs
reranker-runner/tests/: model_integration_test.rs  plugin_integration_test.rs
src/: lib.rs  model.rs
workflow-functions/: ollama-news-summarize-worker.yml  ollama-prompt-runner.yml
