[workspace]

members = [
    "modules/jobworkerp-client",
    "modules/command-utils",
    "llama-protobuf",
    "mtmd-support",              # Shared multimodal projector runtime
    "llama-cpp-plugin",
    "embedding-llm",
    "reranker-runner",           # New: llama.cpp-based reranker
    "gguf-reranker-validation",  # test crate
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sutr"]
description = "Job-Worker plugin using llama"
repository = "https://github.com/jobworkerp-rs/llama-plugins"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = { version = "0.1" }
clap = { version = "4.5", features = ["derive"] }
command-utils = { git = "https://github.com/sutr-app/command-utils", branch = "main" }
debug_stub_derive = "0.3"
dotenvy = { version = "0.15" }
encoding_rs = "0.8"
envy = { version = "0.4" }
futures = { version = "0.3" }
hf-hub = { version = "0.5" }
# Force OpenSSL to be statically linked (vendored) so the resulting plugin .so
# does not depend on the host's libssl/libcrypto versions. Without this, the
# build host's OpenSSL (e.g. 3.6 on Manjaro) leaks symbol-version requirements
# (OPENSSL_3.2.0 / 3.3.0) that runtime images on Ubuntu 24.04 (OpenSSL 3.0.x)
# cannot satisfy, causing dlopen() to fail at plugin load.
openssl = { version = "0.10", features = ["vendored"] }
itertools = { version = "0.14" }
# llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "2822e3ae86a66b571cc6de371feefb938f4f1da7" }
#llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", rev = "4d1df04fb28b247494849d018d55a7fcf42c0ee1" }
# `mtmd` feature enables the multimodal projector module used by image/audio inputs.
llama-cpp-2 = { version = "0.1.146", features = ["mtmd", "llguidance"] }
llama-cpp-sys-2 = { version = "0.1.146" }
once_cell = { version = "1" }
opentelemetry = "0.31"
prost = { version = "0.14" }
prost-build = { version = "0.14" }
rand = { version = "0.9" }
regex = { version = "1" }
schemars = { version = "1.0.4", features = ["chrono04"] }
serde = { version = "1" }
serde_json = { version = "1" }
thiserror = "2"
tokenizers = "0.22"
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2" }

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
