[workspace]

members = [
    "modules/command-utils",
    "hf-hub-utils",
    "llama-protobuf",
    "mtmd-support",              # Shared multimodal projector runtime
    "llama-cpp-plugin",
    "embedding-llm",
    "reranker-runner",           # New: llama.cpp-based reranker
    "gguf-reranker-validation",  # test crate
]

exclude = [
    "modules/llama-cpp-rs",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sutr"]
description = "Job-Worker plugin using llama"
repository = "https://github.com/jobworkerp-rs/llama-plugins"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
# `=` exact-requirement: `FfiFuture<T>` is the one type that still crosses
# the V2 plugin FFI boundary. async-ffi is re-exported from
# jobworkerp-plugin-abi, but pinning it here as well guarantees that any
# direct uses in the workspace resolve to the same patch as the ABI crate.
async-ffi = "=0.5.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
command-utils = { git = "https://github.com/sutr-app/command-utils", branch = "main" }
debug_stub_derive = "0.3"
dotenvy = { version = "0.15" }
encoding_rs = "0.8"
envy = { version = "0.4" }
futures = { version = "0.3" }
hf-hub = { version = "0.5" }
hf-hub-utils = { path = "hf-hub-utils" }
itertools = { version = "0.14" }
minijinja = { version = "2", features = ["json"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
# New V2 ABI: shared between jobworkerp-rs host and every plugin. The ABI
# is `#[repr(C)]` except for FfiFuture, so host/plugin can resolve their
# own tokio / tokio-util / rustc independently.
jobworkerp-plugin-abi = { git = "https://github.com/jobworkerp-rs/jobworkerp-rs.git", branch = "main", package = "jobworkerp-plugin-abi" }
jobworkerp-plugin-abi-macros = { git = "https://github.com/jobworkerp-rs/jobworkerp-rs.git", branch = "main", package = "jobworkerp-plugin-abi-macros" }
# `mtmd` feature enables the multimodal projector module used by image/audio inputs.
# Fork adds `MtmdInputChunks::eval_chunk` (single-chunk partial prefill) for
# multimodal KV-cache prefix reuse, not available upstream.
llama-cpp-2 = { path = "modules/llama-cpp-rs/llama-cpp-2", features = ["mtmd", "llguidance"] }
llama-cpp-sys-2 = { path = "modules/llama-cpp-rs/llama-cpp-sys-2" }
once_cell = { version = "1" }
# Force OpenSSL to be statically linked (vendored) so the resulting plugin .so
# does not depend on the host's libssl/libcrypto versions. Without this, the
# build host's OpenSSL (e.g. 3.6 on Manjaro) leaks symbol-version requirements
# (OPENSSL_3.2.0 / 3.3.0) that runtime images on Ubuntu 24.04 (OpenSSL 3.0.x)
# cannot satisfy, causing dlopen() to fail at plugin load.
openssl = { version = "0.10", features = ["vendored"] }
opentelemetry = "0.31"
prost = { version = "0.14" }
prost-build = { version = "0.14" }
proto = { git = "https://github.com/jobworkerp-rs/jobworkerp-rs.git", branch = "main", package = "proto" }
rand = { version = "0.9" }
regex = { version = "1" }
schemars = { version = "1.0.4", features = ["chrono04"] }
serde = { version = "1" }
serde_json = { version = "1" }
thiserror = "2"
tokenizers = "0.22"
# tokio and tokio-util used to be exact-pinned because their types crossed
# the V2 plugin FFI boundary (`mpsc::Sender`, `CancellationToken`). They no
# longer do — the boundary is `#[repr(C)]` types from
# jobworkerp-plugin-abi, so plugins can move their own tokio version
# independently of the host.
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2" }

[workspace.lints.rust]
missing_docs = { level = "warn" }
missing_debug_implementations = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
panic = "unwind"

[profile.dev]
panic = "unwind"
