[package]
name = "embedding-llm"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "LLM-based embedding generation plugin"
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jobworkerp-client = { path = "../modules/jobworkerp-client" }

anyhow = { workspace = true }
async-trait = { workspace = true }
command-utils = { workspace = true }
dotenvy = { workspace = true }
hf-hub = { workspace = true }
itertools = { workspace = true }
llama-cpp-2 = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokenizers = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
native = ["llama-cpp-2/native"]
dynamic-link = ["llama-cpp-2/dynamic-link"]
openmp = ["llama-cpp-2/openmp"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
