[package]
name = "hf-hub-utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Shared Hugging Face Hub cache repair utilities"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
hf-hub = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
