[package]
name = "jobworkerp-llama-cpp-plugin"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "sample"

[lib]
crate-type = ["dylib", "rlib"]
#crate-type = ["cdylib"]


[dependencies]
jobworkerp-client = { path = "../modules/jobworkerp-client" }
jobworkerp-llama-protobuf = { path = "../llama-protobuf" }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
command-utils = { workspace = true }
dotenvy = { workspace = true }
encoding_rs = { workspace = true }
envy = { workspace = true }
hf-hub = { workspace = true }
llama-cpp-2 = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[features]
#default = ["cuda"]
#default = ["openmp"]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
native = ["llama-cpp-2/native"]
dynamic-link = ["llama-cpp-2/dynamic-link"]
openmp = ["llama-cpp-2/openmp"]
