[package]
name = "jobworkerp-llama-cpp-plugin"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "sample"

[lib]
crate-type = ["dylib", "rlib"]
#crate-type = ["cdylib"]


[dependencies]
jobworkerp-plugin-abi = { workspace = true }
jobworkerp-plugin-abi-macros = { workspace = true }
jobworkerp-llama-protobuf = { path = "../llama-protobuf" }
mtmd-support = { path = "../mtmd-support" }
proto = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
command-utils = { workspace = true }
dotenvy = { workspace = true }
encoding_rs = { workspace = true }
envy = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
llama-cpp-2 = { workspace = true }
# Vendored OpenSSL (configured in workspace) keeps libssl/libcrypto out of
# runtime dependencies. Required because hf-hub's default features select
# native-tls.
openssl = { workspace = true }
llama-cpp-sys-2 = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
base64 = "0.22.1"

[features]
#default = ["cuda"]
#default = ["openmp"]
default = []
metal = ["llama-cpp-2/metal"]
cuda = ["llama-cpp-2/cuda"]
rocm = ["llama-cpp-2/rocm"]
# `native` optimizations are now enabled by default in llama-cpp-2 >= 0.1.143.
# This feature is kept as a no-op for backward compatibility.
native = []
dynamic-link = ["llama-cpp-2/dynamic-link"]
openmp = ["llama-cpp-2/openmp"]
