[package]
name = "jobworkerp-llama-protobuf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
