[package]
name = "jobworkerp-llama-protobuf"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prost = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
command-utils = { path = "../modules/command-utils" }
serde_json = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
