[package]
name = "jobworkerp-ollama-plugin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "summary_dialy"
path = "src/bin/main.rs"


[lib]
#crate-type = ["dylib", "rlib"]
crate-type = ["cdylib", "rlib"]


[dependencies]
jobworkerp-client = { path = "../modules/jobworkerp-client" }
jobworkerp-util = { path = "../modules/jobworkerp-util" }
jobworkerp-llama-protobuf = { path = "../llama-protobuf" }

anyhow = { workspace = true }
command-utils = { workspace = true }
dotenvy = { workspace = true }
itertools = { workspace = true }
ollama-rs = { workspace = true, features = ["stream", "tool-implementations"] }
prost = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
