[package]
name = "llama-cpp-reranker-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reranker plugin runner using llama.cpp"
license.workspace = true

[lib]
name = "message_vectordb_reranker_runner"
crate-type = ["cdylib", "lib"]            # Plugin dynamic library

[features]
default = []

# Hardware acceleration (llama.cpp features)
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
rocm = ["llama-cpp-2/rocm"]
openmp = ["llama-cpp-2/openmp"]

[dependencies]
# === Local Dependencies ===
command-utils = { workspace = true }

# === JobworkerP Plugin Framework ===
jobworkerp-plugin-abi = { workspace = true }
jobworkerp-plugin-abi-macros = { workspace = true }
# Rename to `host_proto` to avoid clashing with the internal `pub mod proto`
# in src/lib.rs (which carries this crate's own `RerankerArgs`,
# `RerankerResult`, etc.). Inheriting from workspace.dependencies would
# require matching the workspace key name, so we restate the git source
# inline here.
host-proto = { git = "https://gitea.sutr.app/jobworkerp-rs/jobworkerp-rs.git", branch = "plugin-compat", package = "proto" }

# === llama.cpp ===
encoding_rs = { workspace = true }
llama-cpp-2 = { workspace = true }
hf-hub = { workspace = true }
# Vendored OpenSSL (configured in workspace) keeps libssl/libcrypto out of
# runtime dependencies. Required because hf-hub's default features select
# native-tls.
openssl = { workspace = true }

# === Workspace Dependencies ===
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tracing = { workspace = true }
prost = { workspace = true }
dotenvy = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
lru = { version = "0.16" }         # For cache.rs

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
host-proto = { git = "https://gitea.sutr.app/jobworkerp-rs/jobworkerp-rs.git", branch = "plugin-compat", package = "proto" }
jobworkerp-plugin-abi = { workspace = true }
tempfile = "3.23"
tokio-test = "0.4"
